<resources>
    <string name="app_name">Virtual-Gaming</string>
    <string name="title_home">Home</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_juegos">Juegos</string>
    <string name="title_vacio"> </string>
    <string name="title_notifications">Notifications</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_ordenadores">Ordenadores</string>
    <string name="title_salir">Salir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="favorito">Favorito</string>
    <string name="Contrasenya">Contraseña</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="megusta">Me Gusta</string>
    <string name="nomegusta">No Me Gusta</string>
    <string name="login">Login</string>
    <string name="titulo">Titulo:</string>
    <string name="email_example">example@hotmail.com</string>
    <string name="xxx">xx-xx-xxxx</string>
    <string name="descripcion_juego">Descripcion del Juego</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_acceso">Acceso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="comparar">Comparar</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tarjetas_graficas">Tarjetas Graficas:</string>
    <string name="memoria_ram">Memoria RAM:</string>
    <string name="proce_sadores">Procesador:</string>
    <string name="titulo_ordena">Titulo:</string>
    <string name="nombre_juego">Nombre Juego</string>
    <string name="plata_juego">Plataforma:</string>
    <string name="precio_juego">Precio:</string>
    <string name="requisitos">Requisitos:</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="verperfil">Ver Perfil</string>
    <string name="nombreusuario">nombre usuario</string>
    <string name="fechaNaci">Fecha Nacimiento</string>
    <string name="nombrecompleto">Nombre Completo</string>
    <string name="fechanacimiento">Fecha de Nacimiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="procesadores">
        <item>Intel core 2 duo</item>
        <item>Intel core i3</item>
        <item>AMD Ryzen 3</item>
        <item>Intel core i5</item>
        <item>AMD Ryzen 5</item>
        <item>Intel core i7</item>
        <item>AMD Ryzen 7</item>
        <item>Intel core i9</item>
        <item>AMD Ryzen 9</item>
    </string-array>

    <string-array name="memorias">
        <item>6GB DDR2</item>
        <item>6GB DDR3</item>
        <item>8GB DDR3</item>
        <item>8GB DDR4</item>
        <item>12GB DDR3</item>
        <item>12GB DDR4</item>
        <item>16GB DDR3</item>
        <item>16GB DDR4</item>
        <item>24GB DDR4</item>
        <item>24GB DDR5</item>
    </string-array>

    <string-array name="graficas">
        <item>NVIDIA GTX 750 ti</item>
        <item>NVIDIA GTX 780</item>
        <item>NVIDIA GTX 1050 ti</item>
        <item>NVIDIA GTX 1080</item>
        <item>NVIDIA RTX 2060</item>
        <item>NVIDIA RTX 2070</item>
        <item>NVIDIA TITAN V</item>
        <item>NVIDIA TITAN X</item>
        <item>NVIDIA RTX 3260 ti</item>
        <item>NVIDIA RTX 3070</item>
        <item>NVIDIA RTX 3080</item>
    </string-array>
</resources>